<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Patient Database Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_submit_hcn">Submit HCN</string>
    <string name="hcn_prompt">Please enter the patient\'s health card number below:</string>
    <string name="hcn">Health Card Number</string>
    <string name="submit">Submit</string>
    <string name="title_activity_physician_actions">Physician Actions</string>
    <string name="see_history">See Patient History</string>
    <string name="set_prescription">Set Patient Prescription</string>
    <string name="title_activity_register_patient">Register New Patient</string>
    <string name="personal_info_prompt">Please enter the patient\'s personal information below:</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="title_activity_new_visit">Start New Visit</string>
    <string name="alt_choice">Or alternatively, view a list of patients sorted by:</string>
    <string name="arrival_dt">Arrival Date and Time</string>
    <string name="urgency">Urgency</string>
    <string name="current_dt_prompt">Please enter the current date and time below:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title_activity_current_patient">Current Patient</string>
    <string name="update_patient">Update Patient</string>
    <string name="triage">Triage</string>
    <string name="title_activity_update_patient">Update Patient</string>
    <string name="temperature">Temperature</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="systolic_bp">Systolic</string>
    <string name="diastolic_bp">Diastolic</string>
    <string name="symptoms">Symptoms</string>
    <string name="seen_by_doc">Seen by doctor</string>
    <string name="update">Update</string>
    <string name="title_activity_set_prescription">Set Prescription</string>
    <string name="medications">Medication names</string>
    <string name="prescription">Instructions</string>
    <string name="title_activity_patient_history">Patient Record History</string>
    <string name="title_activity_waitlist">Waitlist</string>

</resources>
