<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xu.leon.patientdatabasemanager.SubmitHCN" >

    <TextView
        android:id="@+id/hcn_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/hcn_prompt" />

    <EditText
        android:id="@+id/hcn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hcn_prompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hcn"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hcn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="@string/submit" />

    <TextView android:id="@+id/alt" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_below="@+id/submit" 
        android:layout_centerHorizontal="true" 
        android:layout_marginTop="32dp" 
        android:text="@string/alt_choice" />
    
    <Button
        android:id="@+id/sort_by_dt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="@string/arrival_dt" />

    <Button
        android:id="@+id/sort_by_urgency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sort_by_dt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="@string/urgency" />

    

</RelativeLayout>