<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xu.leon.patientdatabasemanager.NewVisit" >

    <TextView
        android:id="@+id/dt_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/current_dt_prompt" />
    
    <EditText
        android:id="@+id/current_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dt_prompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="time" />

    <Button
        android:id="@+id/submit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/personal_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dt_prompt"
        android:layout_alignRight="@+id/submit3"
        android:layout_marginBottom="16dp"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/past_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="@string/see_history" />

</RelativeLayout>