<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xu.leon.patientdatabasemanager.PhysicianActions" >

    <TextView
        android:id="@+id/hcn_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/hcn_prompt" />

    <EditText
        android:id="@+id/hcn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hcn_prompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hcn"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/submit4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hcn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="@string/see_history" />

    <Button
        android:id="@+id/prescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit4"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="@string/set_prescription" />

</RelativeLayout>
